--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,5 +20,6 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "python-multipart>=0.0.20",
     "redis>=6.2.0",
+    "requests>=2.32.3",
     "uvicorn>=0.34.3",
 ]
